# rust-forth-compiler

./: .gitignore  Cargo.toml  LICENSE  README.md  init.forth
.github/workflows/: ci.yml
src/: .lib.rs.swp  error.rs  forth_compiler.rs  lib.rs  main.rs  tests.rs
