[package]
name = "rust-forth-compiler"
version = "0.5.4"
authors = ["Frederick Price <rprice@pricemail.ca>"]
edition = "2024"
license = "MIT"
description = "A Forth compiler written in Rust"
homepage = "https://github.com/rickprice/rust-forth-compiler"
repository = "https://github.com/rickprice/rust-forth-compiler"
keywords = ["forth","compiler"]
categories = ["embedded"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-simple-stack-processor = "0.7.1"
#rust-simple-stack-processor = { path="../rust-simple-stack-processor"}
rust-forth-tokenizer= "0.2.1"
#rust-forth-tokenizer = { path="../rust-forth-tokenizer"}

[features]
enable_reflection=[]
