[package]
name = "rust-forth-compiler"
version = "0.7.0"
authors = ["Frederick Price <rprice@pricemail.ca>"]
rust-version = "1.85.0"
edition = "2024"
license = "MIT"
description = "A Forth compiler written in Rust"
homepage = "https://github.com/rickprice/rust-forth-compiler"
repository = "https://github.com/rickprice/rust-forth-compiler"
keywords = ["forth","compiler"]
categories = ["embedded"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-simple-stack-processor = "0.10"
#rust-simple-stack-processor = { path="../rust-simple-stack-processor"}
rust-forth-tokenizer= "0.2"
#rust-forth-tokenizer = { path="../rust-forth-tokenizer"}
thiserror = "2"

[features]
enable_reflection=[]
